# telemetry-app-linux

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
src/resmon/: __main__.py
src/resmon/app/: bootstrap.py  service.py
src/resmon/infra/: collectors.py  history.py  processes.py
src/resmon/ui/: formatting.py  main_window.py
src/telemetry/: __init__.py  __main__.py
src/telemetry/app/: bootstrap.py  service.py
src/telemetry/infra/: collectors.py  history.py  system_info.py
src/telemetry/ui/: main_window.py
