[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telemetry"
version = "1.0.0a1"
description = "Personal Linux telemetry monitor (GUI)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.6",
  "psutil>=5.9",
]

[project.scripts]
telemetry = "telemetry.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
